@@ -185,7 +185,8 @@ class CEventHandler
 			const CUnit* shieldCarrier,
 			bool bounceProjectile,
 			const CWeapon* beamEmitter,
-			const CUnit* beamCarrier);
+			const CUnit* beamCarrier,
+			const float3& hitPos);
 
 		bool SyncedActionFallback(const string& line, int playerID);
 		/// @}
